      - the get_data_name() subroutine;
      - the get_data_names() subroutine;
      - the convert_pseudo_data_name_to_category_name() subroutine.
    - cif_validate:
      - the '--merge-ddl1-dictionaries' and '--no-merge-ddl1-dictionaries'
        options.
  * Changed:
    - cif_validate:
      - updated the dictionary handling logic to merge all DDL1
        dictionaries into a single virtual dictionary.
    - COD::CIF::DDL::Ranges:
      - updated the range_to_string_char() subroutine to add single
        quotes around the range limits.
    - molcif2sdf:
      - replaced call to 'babel' with 'obabel' to be compatible with
        all versions of Open Babel.
  * Fixed:
    - COD::CIF::Data::Check:
      - fixed a typo in a warning message generated by the
        check_formula_sum_syntax() subroutine.
    - corrected a typo in the 'cif_CODify', 'cif_cod_deposit', 'codcif2sdf',
      'molcif2sdf' and 'sdf_add_cod_data' scripts.

cod-tools (2.10)

  * Added:
    - cif_validate:
      - a check that reports looped lists containing data items from more
        than one dictionary category;
      - a check that reports unique loop key violations;
      - a check that reports missing mandatory looped list data items.
    - COD::CIF::DDL::DDL1:
      - the get_category_name() subroutine;
      - the get_list_mandatory_flag() subroutine.
  * Changed:
    - cifvalues:
      - updated the help message.
    - cif_validate:
      - reworded a validation message to explicitly state that the composite
        loop reference requires collectively unique values;
      - updated the way validation messages are generated to ensure that
        the canonical form of data item names is used regardless of the
        underlying data structure.
    - COD::CIF::Data::CIF2COD:
      - implemented the handling of the 'gofref' column.
    - COD::CIF::Tags::DictTags:
      - added data item names from the 'cif_core_restraint.dic'