@@ -2549,7 +2549,7 @@ sub validate_enumeration_set
                     'data item ' . q{'} . ( canonicalise_tag($tag) ) . q{'} .
                     ' value ' . q{'} . $values[$i] . q{'} . ' must be one ' .
                     'of the enumeration values [' .
-                        ( join ', ', @{$enum_set} ) .
+                        ( join ', ', map {"'$_'"} @{$enum_set} ) .
                     ']'
              };
     };
