@@ -1,1 +1,1 @@
-scripts/cif_validate: tests/cases/cif_validate_012.inp data_enumeration_values: NOTE, data item '_ddl1_enumeration_item' value 'e' must be one of the enumeration values [a, B, c, D].
+scripts/cif_validate: tests/cases/cif_validate_012.inp data_enumeration_values: NOTE, data item '_ddl1_enumeration_item' value 'e' must be one of the enumeration values ['a', 'B', 'c', 'D'].
