@@ -1,3 +1,3 @@
-scripts/cif_validate: tests/cases/cif_validate_013.inp data_enumeration_values: NOTE, data item '_ddl1_enumeration_item' value 'C' must be one of the enumeration values [a, B, c, D].
-scripts/cif_validate: tests/cases/cif_validate_013.inp data_enumeration_values: NOTE, data item '_ddl1_enumeration_item' value 'd' must be one of the enumeration values [a, B, c, D].
-scripts/cif_validate: tests/cases/cif_validate_013.inp data_enumeration_values: NOTE, data item '_ddl1_enumeration_item' value 'e' must be one of the enumeration values [a, B, c, D].
+scripts/cif_validate: tests/cases/cif_validate_013.inp data_enumeration_values: NOTE, data item '_ddl1_enumeration_item' value 'C' must be one of the enumeration values ['a', 'B', 'c', 'D'].
+scripts/cif_validate: tests/cases/cif_validate_013.inp data_enumeration_values: NOTE, data item '_ddl1_enumeration_item' value 'd' must be one of the enumeration values ['a', 'B', 'c', 'D'].
+scripts/cif_validate: tests/cases/cif_validate_013.inp data_enumeration_values: NOTE, data item '_ddl1_enumeration_item' value 'e' must be one of the enumeration values ['a', 'B', 'c', 'D'].
