@@ -1,4 +1,4 @@
 scripts/cif_validate: tests/cases/cif_validate_040.inp data_[INVALID][2]_range: NOTE, data item '_ddl1_merge_base_override_range' value '-25' should be in range [-13, 42].
 scripts/cif_validate: tests/cases/cif_validate_040.inp data_[INVALID][2]_range: NOTE, data item '_ddl1_merge_base_override_range' value '-31415' should be in range [-13, 42].
-scripts/cif_validate: tests/cases/cif_validate_040.inp data_[INVALID][3]_enumeration: NOTE, data item '_ddl1_merge_base_loop_enumeration' value 'G' must be one of the enumeration values [a, B, c, D, E, F].
-scripts/cif_validate: tests/cases/cif_validate_040.inp data_[INVALID][4]_enumeration_with_details: NOTE, data item '_ddl1_merge_base_loop_enumeration_with_details' value 'x7' must be one of the enumeration values [x1, x2, x3, x4, x5].
+scripts/cif_validate: tests/cases/cif_validate_040.inp data_[INVALID][3]_enumeration: NOTE, data item '_ddl1_merge_base_loop_enumeration' value 'G' must be one of the enumeration values ['a', 'B', 'c', 'D', 'E', 'F'].
+scripts/cif_validate: tests/cases/cif_validate_040.inp data_[INVALID][4]_enumeration_with_details: NOTE, data item '_ddl1_merge_base_loop_enumeration_with_details' value 'x7' must be one of the enumeration values ['x1', 'x2', 'x3', 'x4', 'x5'].
