@@ -1,5 +1,5 @@
 scripts/cif_validate: tests/cases/cif_validate_041.inp data_[INVALID][1]_string_value: NOTE, data item '_ddl1_merge_base_override_type' value 'text' violates type constraints -- the value should be a numerically interpretable string, e.g. '42', '42.00', '4200E-2'.
 scripts/cif_validate: tests/cases/cif_validate_041.inp data_[INVALID][2]_range: NOTE, data item '_ddl1_merge_base_override_range' value '-31415' should be in range [-42, 13].
 scripts/cif_validate: tests/cases/cif_validate_041.inp data_[INVALID][2]_range: NOTE, data item '_ddl1_merge_base_override_range' value '25' should be in range [-42, 13].
-scripts/cif_validate: tests/cases/cif_validate_041.inp data_[INVALID][3]_enumeration: NOTE, data item '_ddl1_merge_base_loop_enumeration' value 'G' must be one of the enumeration values [D, E, F, a, B, c].
-scripts/cif_validate: tests/cases/cif_validate_041.inp data_[INVALID][4]_enumeration_with_details: NOTE, data item '_ddl1_merge_base_loop_enumeration_with_details' value 'x7' must be one of the enumeration values [x2, x3, x4, x5, x1].
+scripts/cif_validate: tests/cases/cif_validate_041.inp data_[INVALID][3]_enumeration: NOTE, data item '_ddl1_merge_base_loop_enumeration' value 'G' must be one of the enumeration values ['D', 'E', 'F', 'a', 'B', 'c'].
+scripts/cif_validate: tests/cases/cif_validate_041.inp data_[INVALID][4]_enumeration_with_details: NOTE, data item '_ddl1_merge_base_loop_enumeration_with_details' value 'x7' must be one of the enumeration values ['x2', 'x3', 'x4', 'x5', 'x1'].
