@@ -1,5 +1,5 @@
-scripts/cif_validate: tests/cases/cif_validate_046.inp data_[INVALID][1]_merged_or_unmerged: NOTE, data item '_ddl1_merge_base_loop_enumeration' value 'P' must be one of the enumeration values [D, E, F].
-scripts/cif_validate: tests/cases/cif_validate_046.inp data_[INVALID][1]_merged_or_unmerged: NOTE, data item '_ddl1_merge_base_loop_enumeration' value 'P' must be one of the enumeration values [a, B, c, D].
-scripts/cif_validate: tests/cases/cif_validate_046.inp data_[INVALID][2]_when_unmerged: NOTE, data item '_ddl1_merge_base_loop_enumeration' value 'B' must be one of the enumeration values [D, E, F].
-scripts/cif_validate: tests/cases/cif_validate_046.inp data_[INVALID][2]_when_unmerged: NOTE, data item '_ddl1_merge_base_loop_enumeration' value 'F' must be one of the enumeration values [a, B, c, D].
-scripts/cif_validate: tests/cases/cif_validate_046.inp data_[INVALID][2]_when_unmerged: NOTE, data item '_ddl1_merge_base_loop_enumeration' value 'a' must be one of the enumeration values [D, E, F].
+scripts/cif_validate: tests/cases/cif_validate_046.inp data_[INVALID][1]_merged_or_unmerged: NOTE, data item '_ddl1_merge_base_loop_enumeration' value 'P' must be one of the enumeration values ['D', 'E', 'F'].
+scripts/cif_validate: tests/cases/cif_validate_046.inp data_[INVALID][1]_merged_or_unmerged: NOTE, data item '_ddl1_merge_base_loop_enumeration' value 'P' must be one of the enumeration values ['a', 'B', 'c', 'D'].
+scripts/cif_validate: tests/cases/cif_validate_046.inp data_[INVALID][2]_when_unmerged: NOTE, data item '_ddl1_merge_base_loop_enumeration' value 'B' must be one of the enumeration values ['D', 'E', 'F'].
+scripts/cif_validate: tests/cases/cif_validate_046.inp data_[INVALID][2]_when_unmerged: NOTE, data item '_ddl1_merge_base_loop_enumeration' value 'F' must be one of the enumeration values ['a', 'B', 'c', 'D'].
+scripts/cif_validate: tests/cases/cif_validate_046.inp data_[INVALID][2]_when_unmerged: NOTE, data item '_ddl1_merge_base_loop_enumeration' value 'a' must be one of the enumeration values ['D', 'E', 'F'].
