@@ -1,1 +1,1 @@
-scripts/cif_validate: tests/cases/cif_validate_047.inp data_[INVALID][1]_merged_or_unmerged: NOTE, data item '_ddl1_merge_base_loop_enumeration' value 'P' must be one of the enumeration values [a, B, c, D, E, F].
+scripts/cif_validate: tests/cases/cif_validate_047.inp data_[INVALID][1]_merged_or_unmerged: NOTE, data item '_ddl1_merge_base_loop_enumeration' value 'P' must be one of the enumeration values ['a', 'B', 'c', 'D', 'E', 'F'].
