@@ -14,7 +14,10 @@ cod-tools (unreleased)
   * Changed:
     - cif_validate:
       - updated the dictionary handling logic to merge all DDL1
-        dictionaries into a single virtual dictionary.
+        dictionaries into a single virtual dictionary;
+      - updated validation messages involving enumeration values
+        to contain single quotes around each of the reported enumeration
+        values.
     - COD::CIF::DDL::Ranges:
       - updated the range_to_string_char() subroutine to add single
         quotes around the range limits.
